added valence analysis and consumer sent

--- a/report.ipynb
+++ b/report.ipynb
@@ -13,7 +13,10 @@
         "author: \"Jeremy Han, Tianyu Zhao, Junyi (Daniel Tang), Hillary Metcheka, Bryce Grover\"\n",
         "format: pdf\n",
         "number-sections: true\n",
-        "---"
+        "execute:\n",
+        "  warning: false\n",
+        "  message: false\n",
+        "---\n"
       ]
     },
     {
@@ -47,7 +50,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "When we listen to a song we have heard before, it often brings back the scene and emotions we felt the first time we heard it. Music has a unique ability to capture personal moments while also reflecting broader collective experiences. Therefore, we wonder whether the patterns of emotions in popular music change in response to social and economic pressures. Also, prior research shows that during recessions, societies shift toward more positive music[1](Palomeque et al. 2024). Hence, we focus on the COVID-19 pandemic because during this period, there is a simultaneous emotional disruption and economic uncertainty on a global scale. During this time of crisis, financial markets reacted rapidly to uncertainty, reflecting shifts in public confidence, expectations, and risk. Because stock prices capture collective economic sentiment, we use Spotify’s stock performance as an economic indicator to examine whether changes in musical sentiment align with changes in economic conditions. Therefore, we hope by studying music emotion and stock market behavior together, we aim to assess whether cultural sentiment and economic stress move in tandem during periods of extreme disruption."
+        "When we listen to a song we have heard before, it often brings back the scene and emotions we felt the first time we heard it. Music has a unique ability to capture personal moments while also reflecting broader collective experiences. Therefore, we wonder whether the patterns of emotions in popular music change in response to social and economic pressures. Also, prior research shows that during recessions, societies shift toward more positive music [1]. Hence, we focus on the COVID-19 pandemic because during this period, there is a simultaneous emotional disruption and economic uncertainty on a global scale. During this time of crisis, financial markets reacted rapidly to uncertainty, reflecting shifts in public confidence, expectations, and risk. Because stock prices capture collective economic sentiment, we use Spotify’s stock performance as an economic indicator to examine whether changes in musical sentiment align with changes in economic conditions. Therefore, we hope by studying music emotion and stock market behavior together, we aim to assess whether cultural sentiment and economic stress move in tandem during periods of extreme disruption."
       ]
     },
     {
@@ -56,9 +59,9 @@
       "source": [
         "# Related Work\n",
         "\n",
-        "Prior research shows that the public's music preferences shift during economic and social adversity. Using large-scale music consumption data, Palomeque et al. found that listeners tend to prefer positive music during economic and social adversity [1](Palomeque et al. 2024). Palomeque et al.'s results suggest that during economic downturns and periods of social instability, people's music preferences change with their emotions.\n",
+        "Prior research shows that the public's music preferences shift during economic and social adversity. Using large-scale music consumption data, Palomeque et al. found that listeners tend to prefer positive music during economic and social adversity [1]. Palomeque et al.'s results suggest that during economic downturns and periods of social instability, people's music preferences change with their emotions.\n",
         "\n",
-        "Also, there are studies that have examined how COVID-19 affected stock market performance within the music industry itself. Hu and Kim analyze the log-returns of stocks for representative music companies such as Live Nation Entertainment, Tencent Music Entertainment, and Warner Music Group, and observe that early in the pandemic, music-industry stock indices declined and exhibited a negative relationship, while correlations in returns changed after vaccines became widely available [2](Hu & Kim 2022).\n",
+        "Also, there are studies that have examined how COVID-19 affected stock market performance within the music industry itself. Hu and Kim analyze the log-returns of stocks for representative music companies such as Live Nation Entertainment, Tencent Music Entertainment, and Warner Music Group, and observe that early in the pandemic, music-industry stock indices declined and exhibited a negative relationship, while correlations in returns changed after vaccines became widely available [2].\n",
         "\n",
         "However, despite these parallel findings, existing research has largely studied musical sentiment and financial markets in isolation. Thus, studying the relationship between music features and economic indicators together helps us understand how the music responds to economic disruption."
       ]
@@ -257,11 +260,9 @@
       "metadata": {},
       "source": [
         "To answer our research questions overall:\n",
-        "- Yes, the emotional and acoustic characteristics of popular music changed considerably during the COVID-19 pandemic. Independent samples t-tests revealed significant differences between the 50 most popular songs before and after the pandemic for all the main characteristics analyzed: valence, energy, authenticity, and acoustic quality. After the start of the pandemic, songs became noticeably more joyful (higher valence), slightly less energetic, and more authentic, they sounded more “live” or organic. Acoustic quality also changed significantly, reflecting a notable shift in production style.\n",
-        "\n",
-        "- Yes. The changes are not only measurable but also statistically significant. T-tests confirmed highly significant differences (p < 0.001) in terms of valence, energy, dynamism, and acoustics between pre- and post-pandemic music. Moreover, the bootstrap confidence interval for the change in valence captured this change with high precision, confirming that the increase in emotional positivity was not due to chance. The ANOVA results showed that valence also varied significantly year-over-year (2017–2021), indicating a broader temporal trend beyond the simple COVID-19 lockdown period. \n",
-        "\n",
-        "- The chi-square test revealed no significant association between the period (before and after COVID) and the mode (major or minor) of a piece. The distribution of major and minor modes remained stable across periods. Therefore, despite a shift in listener preferences regarding valence or energy, the overall tonal structure of popular music did not undergo a significant transformation during the pandemic. Emotional expression evolved through production and sonic texture rather than through changes in traditional musical modes."
+        "- Yes, several emotional and acoustic characteristics of popular music changed during the COVID-19 period. Welch’s t-tests show statistically significant differences for valence, energy, liveness, and acousticness between pre- and post-COVID periods.\n",
+        "- The magnitude of change is mixed. Valence differs across years (ANOVA), but the bootstrap confidence interval for the pre/post mean difference includes zero, so the valence increase is not robust under resampling and should be interpreted as small.\n",
+        "- No, musical key mode (major vs. minor) did not change significantly (chi-square). Emotional differences appear in audio characteristics rather than key mode.\n"
       ]
     },
     {
@@ -437,7 +438,72 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Cross-Domain Dynamics: The Resilience of Cultural Sentiment"
+        "## Cross-Domain Dynamics: The Resilience of Cultural Sentiment"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Time series analysis of valence and consumer sentiment\n",
+        "\n",
+        "#### Motivation and variable selection\n",
+        "\n",
+        "After analyzing Spotify (SPOT) stock behavior, we shifted from a market outcome to a consumer mood outcome. Earlier EDA and hypothesis testing suggested that **valence** is the most interpretable proxy for musical positivity in Spotify’s audio features and the most plausible candidate for any relationship with broader sentiment. This section tests whether valence exhibits meaningful time series structure and whether it helps explain **consumer sentiment** beyond sentiment’s own dynamics.\n",
+        "\n",
+        "#### Data and preprocessing\n",
+        "\n",
+        "We constructed two monthly series from 2017 through mid-2021:\n",
+        "\n",
+        "- Mean valence of the Spotify Global Top 200 tracks in each month  \n",
+        "- University of Michigan consumer sentiment in the same month  \n",
+        "\n",
+        "Spotify track-level observations were aggregated to monthly means using tracks that appeared on the Global Top 200 chart. Consumer sentiment was aligned to the same year-month index. For modeling, we kept original units and applied differencing only when stationarity checks suggested it was needed. For descriptive comparisons, we standardized series to z-scores when helpful.\n",
+        "\n",
+        "A key limitation of this analysis is sample size. With roughly 50 to 60 monthly observations, only large and stable effects are likely to be detectable.\n",
+        "\n",
+        "#### Univariate behavior of musical valence\n",
+        "\n",
+        "We first examined valence on its own using standard time series diagnostics (trend inspection, decomposition, lag relationships, and autocorrelation behavior). Monthly valence shows only mild structure. Autocorrelation is weak at short lags and does not indicate a strong, stable AR or MA pattern. After transformation and differencing used for modeling, valence fluctuations are small and centered near zero, consistent with limited predictability at the monthly level.\n",
+        "\n",
+        "These patterns suggest that only simple ARIMA specifications are appropriate for valence and that large forecasting gains from historical valence alone are unlikely.\n",
+        "\n",
+        "#### Univariate behavior of consumer sentiment\n",
+        "\n",
+        "Consumer sentiment exhibits clearer macro dynamics than valence. It is relatively stable before 2020, then experiences a large drop and partial recovery around the onset of COVID-19, which is consistent with a structural break or shock. The magnitude of these sentiment movements is much larger than the month-to-month movement observed in valence, which already suggests valence is unlikely to explain the largest swings in sentiment during this period.\n",
+        "\n",
+        "#### Joint exploratory analysis of valence and sentiment\n",
+        "\n",
+        "We compared the two series on a common standardized scale and examined time-local association using rolling windows. Co-movement is inconsistent across time: the association changes sign and magnitude depending on the window, and no stable lead-lag pattern is apparent. This instability is not what we would expect if shifts in musical positivity were reliably linked to shifts in consumer sentiment at a monthly cadence.\n",
+        "\n",
+        "After differencing both series to focus on month-to-month changes, valence remains low-variance while sentiment retains large spikes tied to macro shocks. The dependence patterns are not similar, further weakening the case for a tight dynamic relationship.\n",
+        "\n",
+        "#### ARIMA and ARIMAX modeling\n",
+        "\n",
+        "We fit ARIMA models to valence and checked residual behavior to ensure the model captured any available serial dependence. Across reasonable ARIMA specifications, residuals do not show strong remaining autocorrelation, which supports the conclusion that monthly valence contains limited predictable structure.\n",
+        "\n",
+        "To test whether valence helps explain consumer sentiment beyond sentiment’s own dynamics, we fit an ARIMAX model with:\n",
+        "\n",
+        "- Response: consumer sentiment  \n",
+        "- Exogenous regressor: valence  \n",
+        "\n",
+        "Across specifications (levels versus differenced sentiment, alternative AR terms), results were consistent:\n",
+        "\n",
+        "- The estimated valence coefficient was not statistically significant.  \n",
+        "- Including valence did not materially change the autoregressive structure of sentiment.  \n",
+        "- Fit metrics (AIC and BIC) did not improve relative to a baseline ARIMA model for sentiment alone.  \n",
+        "- Out-of-sample forecasts were not meaningfully better than simple benchmarks.\n",
+        "\n",
+        "#### Summary and interpretation\n",
+        "\n",
+        "This section extends Study II from financial market volatility to mood dynamics. Valence was the most defensible musical feature to test as a sentiment proxy, but the time series evidence does not support a stable monthly relationship between musical positivity (Global Top 200 valence) and consumer sentiment.\n",
+        "\n",
+        "1. Monthly valence shows limited time series structure and limited predictability.  \n",
+        "2. Consumer sentiment contains large shocks, especially around 2020, that do not appear in valence.  \n",
+        "3. Association between valence and sentiment is unstable across time windows.  \n",
+        "4. ARIMAX models do not show improved fit or forecasting performance when valence is included.\n",
+        "\n",
+        "Overall, the data do not support the claim that changes in the emotional tone of popular music predict consumer sentiment at a monthly frequency in this sample.\n"
       ]
     },
     {
@@ -447,12 +513,17 @@
       "source": [
         "# Conclusion\n",
         "\n",
+        "## Key findings\n",
         "\n",
+        "Across multiple hypothesis tests, several Spotify audio features differ statistically between the pre- and post-COVID periods, but most estimated effects are small. Valence shows the clearest year-to-year differences, although the bootstrap confidence interval for the pre/post mean difference includes zero. In contrast, Spotify stock prices show a sharp trend change and abnormal volatility during the pandemic. Finally, monthly valence has limited time-series structure, and ARIMAX results do not show evidence that valence predicts consumer sentiment.\n",
         "\n",
-        "## Limitations \n",
+        "## Limitations\n",
         "\n",
+        "This analysis combines Spotify Global Top 200 music data with a U.S. consumer sentiment series, creating a geographic mismatch. Monthly aggregation can mask short-run changes. Spotify audio features are proxies rather than direct measures of perceived emotion. The time series is short and includes COVID-era structural breaks, which limits the reliability of standard ARIMA and ARIMAX modeling. In addition, multiple testing across features increases the risk of false positives.\n",
         "\n",
-        "## Future Directions \n"
+        "## Future directions\n",
+        "\n",
+        "Future work should align geography by pairing country-specific charts with matching sentiment indicators and should consider weekly or daily aggregation. Using lyric-based sentiment or richer audio embeddings would provide a more direct measure of musical emotion. Methods that explicitly handle structural breaks and regime changes would likely be more appropriate for the pandemic period. Finally, stronger out-of-sample validation should be used to assess predictability claims.\n"
       ]
     },
     {
@@ -462,17 +533,22 @@
       "source": [
         "# References\n",
         "\n",
-        "[1] Palomeque, M., & de-Lucio, J. (2024). The Soundtrack of a Crisis: More Positive Music Preferences During Economic and Social Adversity. Journal of Happiness Studies, 25(5), 44. https://doi.org/10.1007/s10902-024-00757-4\n",
+        "[1] Palomeque, M., & de-Lucio, J. (2024). The Soundtrack of a Crisis: More Positive Music Preferences During Economic and Social Adversity. *Journal of Happiness Studies, 25*(5), 44. https://doi.org/10.1007/s10902-024-00757-4\n",
         "\n",
-        "[2] Hu, Y., & Kim, J. (2022). The impact of COVID-19 on the music industry: Evidence from stock market returns. Journal of Risk and Financial Management, 1(4), 30. https://doi.org/10.3390/jrfm1040030\n",
+        "[2] Hu, Y., & Kim, J. (2022). The impact of COVID-19 on the music industry: Evidence from stock market returns. *Journal of Risk and Financial Management, 1*(4), 30. https://doi.org/10.3390/jrfm1040030\n",
         "\n",
-        "[3] Dehghani, M., Gouws, S., Vinyals, O., Uszkoreit, J., & Kaiser, Ł. (2018). Universal Transformers. *arXiv preprint arXiv:1807.03819*."
+        "[3] Anderson, A., Maystre, L., Anderson, I., Mehrotra, R., & Lalmas, M. (2020). Algorithmic Effects on the Diversity of Consumption on Spotify. *Proceedings of The Web Conference 2020*, 2155–2165. https://doi.org/10.1145/3366423.3380281\n",
+        "\n",
+        "[4] bronwyncoate. (2022, November 29). Music preferences as an instrument of emotional self-regulation along the business cycle. ACEI. https://culturaleconomics.org/music-preferences-as-an-instrument-of-emotional-self-regulation-along-the-business-cycle/\n",
+        "\n",
+        "[5] Edmans, A., Fernandez-Perez, A., Garel, A., & Indriawan, I. (2022). Music sentiment and stock returns around the world. *Journal of Financial Economics, 145*(2, Part A), 234–254. https://doi.org/10.1016/j.jfineco.2021.08.014\n",
+        "\n",
+        "[6] Maymin, P. (2012). Music and the market: Song and stock volatility. *The North American Journal of Economics and Finance, 23*(1), 70–85. https://doi.org/10.1016/j.najef.2011.11.004\n",
+        "\n",
+        "[7] Peeters, G., & Angulo, F. (2022). SSM-Net: Feature learning for music structure analysis using a self-similarity-matrix based loss (arXiv:2211.08141). arXiv. https://doi.org/10.48550/arXiv.2211.08141\n",
+        "\n",
+        "[8] University of Michigan Institute for Social Research. (n.d.). Surveys of Consumers—Data. Retrieved December 8, 2025, from https://data.sca.isr.umich.edu/data-archive/mine.php"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": []
     }
   ],
   "metadata": {
